--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "release-it"
   },
   "keywords": [],
   "author": "Joe Flateau",
   "license": "ISC",
   "dependencies": {
     "tailwindcss": "^3.0.23"
+  },
+  "devDependencies": {
+    "release-it": "^14.12.5"
   }
 }
